--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
+    "module-alias": "^2.2.3",
     "uuid": "^9.0.1",
     "ws": "^8.17.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0"
+  },
+  "_moduleAliases": {
+    "utils": "./utils"
   }
 }
